k8s/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.global-static-ip-name: freebail-wedding
    networking.gke.io/managed-certificates: jimbali-cert
  name: freebail-wedding-ingress
spec:
  backend:
    serviceName: freebail-frontend
    servicePort: 8080
  rules:
  - host: freebail.wedding
    http:
      paths:
      - backend:
          serviceName: freebail-frontend
          servicePort: 8080
        path: /*
      - backend:
          serviceName: freebail-wedding-api
          servicePort: 3000
        path: /api/*
  - host: admin.freebail.wedding
    http:
      paths:
      - backend:
          serviceName: phpmyadmin
          servicePort: 8080
        path: /*
  - host: eagsmaster.jimba.li
    http:
      paths:
      - backend:
          serviceName: eagsmaster
          servicePort: 3000
        path: /*
  - host: magicode.co.uk
    http:
      paths:
      - backend:
          serviceName: magicode
          servicePort: 80
        path: /*
  - host: exttest.magicode.co.uk
    http:
      paths:
      - backend:
          serviceName: magicode
          servicePort: 80
        path: /*
  - host: astedroid-api.magicode.co.uk
    http:
      paths:
      - backend:
          serviceName: astedroid-api
          servicePort: 3000
        path: /*
